--- a/public/prototipo_index.html
+++ b/public/prototipo_index.html
@@ -345,7 +345,7 @@ footer {
 
       <section id="heroImage">
         <p>Welcome to CSE Motors !</p>
-        <img src="/public/images/vehicles/delorean-removebg-preview.png" alt="" />
+        <img src="/images/vehicles/delorean-removebg-preview.png" alt="" />
         <div id="carFeatures">
           <ul>
             <li>DMC Delorean</li>
@@ -363,19 +363,19 @@ footer {
           <h1>Delorean Upgrades</h1>
           <div id="galery">
             <figure>
-              <img src="/public/images/upgrades/flux-cap.png" alt="Image 3" />
+              <img src="/images/upgrades/flux-cap.png" alt="Image 3" />
               <figcaption><a href="#">Flux Capacitor</a></figcaption>
             </figure>
             <figure>
-              <img src="/public/images/upgrades/flame.jpg" alt="Image 2" />
+              <img src="/images/upgrades/flame.jpg" alt="Image 2" />
               <figcaption><a href="#">Flame Decals</a></figcaption>
             </figure>
             <figure>
-              <img src="/public/images/upgrades/bumper_sticker.jpg" alt="Image 1" />
+              <img src="/images/upgrades/bumper_sticker.jpg" alt="Image 1" />
               <figcaption><a href="#">Bumper Stickers</a></figcaption>
             </figure>
             <figure>
-              <img src="/public/images/upgrades/hub-cap.jpg" alt="Image 4" />
+              <img src="/images/upgrades/hub-cap.jpg" alt="Image 4" />
               <figcaption><a href="#">Hub Caps</a></figcaption>
             </figure>
           </div>
